--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Vibe Tribe Travels - Discover your next adventure with our curated travel experiences. From pristine beaches to majestic mountains, let us guide you to unforgettable destinations." />
+    <meta name="description" content="Vibe Tribe Travels " />
     <meta name="keywords" content="travel, vacation, destinations, adventure, tourism, vibe tribe travels" />
     <meta name="author" content="Vibe Tribe Travels" />
     <title>Vibe Tribe Travels - Discover Your Next Adventure</title>
